<resources>

    <string name="app_name">Viagem no Bolso</string>
    <string name="button_salvar">Salvar</string>
    <string name="title_activity_detail">Nuevo gasto</string>
    <string name="valor">Valor</string>
    <string name="descricao">Descrição</string>
    <string name="tipo_depesa">Tipo de Despesa</string>
    <string name="tipo_moeda">Tipo de Moeda</string>
    <string name="data">Data</string>
    <string name="resumo">Resumo</string>
    <string name="inserir">Inserir</string>
    <string name="etiqueta_info_01">Resumo Despesas</string>
    <string name="etiqueta_info_02">Gráfico Despesas</string>
    <string name="etiqueta_info_03">Resummo Total</string>
    <string name="menu_cotacao">Atualizar Cotação</string>
    <string name="etiqueta_valores">R$ 800</string>
    <string name="aguarde_progress">Aguarde...</string>
    <string name="informacao_empty">Não há dados a serem mostrados</string>

    <string-array name="despesas">
        <item>Alimentação</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>

    <string-array name="moedas">
        <item>Real</item>
        <item>Euro</item>
        <item>Dolar</item>
    </string-array>

</resources>
