<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/formulario"
            style="@style/padding_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/despesa_valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/valor"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <TextView
            android:id="@+id/categoria_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/tipo_depesa"
            android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/despesa_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/despesas" />

            <TextView
                android:id="@+id/moeda_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/tipo_moeda"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/despesa_moeda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/moedas" />

            <TextView
                android:id="@+id/data_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/data"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/despesa_data"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="dd/mm/yyyy"
                android:focusable="false"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10">

                <EditText
                    android:id="@+id/despesa_descricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descricao" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/boton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/universal_margin"
                android:background="@color/colorAccent"
                android:onClick="clickButtom"
                android:text="@string/button_salvar"
                android:textColor="@android:color/white" />

        </LinearLayout>



    </RelativeLayout>
</ScrollView>