<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tb_main"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <Spinner
                android:id="@+id/toolbar_spinner"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:entries="@array/moedas"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/resumo_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/informacao_empty" />

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/linear_despesa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#dee4ee"
        android:orientation="vertical"
        android:padding="@dimen/espacio_norma_1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/etiqueta_info_03"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="2dp"
            card_view:cardUseCompatPadding="true">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:padding="@dimen/espacio_norma_1"
                android:rowCount="2">

                <ImageView
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/espacio_norma_2"
                    app:srcCompat="@mipmap/ic_wallet_travel_grey600_24dp" />

                <TextView
                    android:id="@+id/resumo_text_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/etiqueta_valores"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


            </GridLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/titulo_informacion_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/espacio_norma_2"
            android:paddingTop="@dimen/espacio_norma_1"
            android:text="@string/etiqueta_info_01"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="2dp"
            card_view:cardUseCompatPadding="true">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:padding="@dimen/espacio_norma_1"
                android:rowCount="2">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="@dimen/espacio_norma_2"
                    app:srcCompat="@drawable/icon_despesa_roxo" />

                <TextView
                    android:id="@+id/resumo_text_alimentacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="16dp"
                    android:maxLines="1"
                    android:text="@string/etiqueta_valores"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    app:srcCompat="@drawable/icon_despesa_blue" />

                <TextView
                    android:id="@+id/resumo_text_transporte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:layout_marginBottom="16dp"
                    android:text="@string/etiqueta_valores"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginRight="8dp"
                    app:srcCompat="@drawable/icon_despesa_green" />

                <TextView
                    android:id="@+id/resumo_text_hospedagem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:layout_marginBottom="16dp"
                    android:text="@string/etiqueta_valores"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    app:srcCompat="@drawable/icon_despesa_laranja" />

                <TextView
                    android:id="@+id/resumo_text_outros"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/etiqueta_valores"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </GridLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
